--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,29 @@
-	<header class="navbar navbar-fixed-top navbar-inverse">
-	      <div class="container">
-	        <%= link_to "LeaveManagement", '#', id: "logo" %>
-	        <nav>
-	          <ul class="nav navbar-nav navbar-right">
-	            <li><%= link_to "Home",   '#' %></li>
-	            <li><%= link_to "Help",   '#' %></li>
-	            <li><%= link_to "Log in", '#' %></li>
-	          </ul>
-	        </nav>
-	      </div>
-	    </header>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to "leave management", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        
+        
+        <% if logged_in? && !current_user.is_admin? %>
+          
+              <li><%= link_to "Apply","/leaves/new" %></li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>
+        <% elsif logged_in? && current_user.is_admin? %>
+          
+              <li><%= link_to "applied leaves","/leaves" %></li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>    
+        <% else %>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
+</header>
