--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,10 @@
 		<p><%= @user.email %></p>
 	</div>
 	<div class="col-md-3">
+		<h3>Total No of Leaves</h3>
+		<p><%= @userAdmin.leave_count %></p>
+	</div>
+	<div class="col-md-3">
 		<h3>No Of Leaves left</h3>
 		<p><%= @user.leave_count %></p>
 	</div>
