--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
           
               <li><%= link_to "applied leaves","/leaves" %></li>
               <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Set Leaves Per Year", "/setleaves" %></li>
               <li>
                 <%= link_to "Log out", logout_path, method: :delete %>
               </li>    
