--- a/app/views/leaves/index.html.erb
+++ b/app/views/leaves/index.html.erb
@@ -1,16 +1,22 @@
 <table class="table table-striped">
+
 	<tr>
 	<th>Description</th>
 	<th>Date</th>
 	<th>Status</th>
+	<th>Applied by</th>
 	<th>Action</th>
 	</tr>
 	<tr>
 	<% @leaves.each do |leave| %>
+	<% if leave.status != "approved" %>
 	<td><%= leave.reason.humanize %></td>
-	<td><%= leave.status.humanize %></td>
 	<td><%= leave.leave_date %></td>
+	<td><%= leave.status.humanize %></td>
+	<td><%= User.find(leave.user_id).name %></td>
 	<td><%= link_to "Act","/leaves/#{leave.id}/edit", class: "btn btn-primary"  %></td>
+
 		</tr>
+	<% end %>
 		<% end %>
 </table>
